@@ -68,7 +68,7 @@
   void __slf_ ## Name (void) {						\
     register long __sl_index __asm__(IDXREG);			\
     __asm__ ("# MT: index starts in %0 (must be =" IDXREG ")" : "=r"(__sl_index)); \
-    __asm__ __volatile__(".registers " # GI " " # SI " 19 " # GF " " # SF " 19\n");
+    __asm__ __volatile__(".registers " # GI " " # SI " 21 " # GF " " # SF " 19\n");
 
 [[#]]define __sl_epilogue(Name, ArgSpec)		\
   __sl_end_thread: (void)0; }
